<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appWhite"
        android:padding="0dp"
        tools:context=".ui.home.HomeFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todos_cycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:itemCount="13"
            tools:listitem="@layout/recycler_view_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:clickable="true"
            android:contentDescription="@string/pinned_icon_text_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/todos_cycler"
            app:layout_constraintEnd_toEndOf="@+id/todos_cycler"
            app:layout_constraintStart_toStartOf="@+id/todos_cycler"
            app:layout_constraintTop_toBottomOf="@+id/pinned_icon_image" />

        <TextView
            android:id="@+id/notes_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/notes_text"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/todo_search_box"
            app:layout_constraintEnd_toEndOf="@+id/todo_search_box"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/todo_search_box"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/todo_search_box"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_search"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:boxCornerRadiusBottomEnd="24dp"
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusTopEnd="24dp"
            app:boxCornerRadiusTopStart="24dp"
            app:layout_constraintBottom_toTopOf="@+id/pinned_icon_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notes_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Search"


                android:imeActionLabel='"hello"'
                app:placeholderText="eheheheh" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/pinned_icon_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/pinned_icon_image_content_description"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toStartOf="@+id/pinnedIconText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/todo_search_box"
            app:srcCompat="@drawable/ic_pinned_16" />

        <TextView
            android:id="@+id/pinnedIconText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/pinned_icon_text"

            app:layout_constraintBottom_toBottomOf="@+id/pinned_icon_image"
            app:layout_constraintEnd_toEndOf="@+id/spacer"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/pinned_icon_image"
            app:layout_constraintTop_toTopOf="@+id/pinned_icon_image" />

        <Space
            android:id="@+id/spacer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/pinnedIconText"
            app:layout_constraintTop_toBottomOf="@id/todo_search_box" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>